k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tactic-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: tactic-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
